# dafunk

./: .gitignore  auth gen key.http  requirements.txt
auth/: Makefile  main.py  models.py  pyproject.toml  requests.py  service.py  settings.yaml
auth/src/: controllers.py  requests.py  service.py  utils.py
builder/: db.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  server.py  service.py  settings.py  settings.yaml  setup.py  tox.ini  utils.py
builder/src/: __init__.py  message.py  service.py
builder/tests/: test_config.py  test_routes.py  test_service.py
builder/vendors/base_image/: Dockerfile  Makefile  boot.sh  main.py  setup-networking.sh  vmlinux
core/: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  main.py  pyproject.toml  requirements_dev.txt  tox.ini
core/.github/: ISSUE_TEMPLATE.md
core/dafunk/: __init__.py  broker.py  cli.py  database.py  exceptions.py  http.py  message.py  middleware.py  models.py  prometheus.py  service.py  settings.py  storage.py  utils.py
core/dafunk/broker/: __init__.py  admin.py  consumer.py  kafka.py
core/dafunk/storages/: s3.py
core/dafunk/templates/service/: cookiecutter.json
core/dafunk/templates/service/{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  Makefile  pyproject.toml  requirements_dev.txt  tox.ini
core/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
core/tests/: __init__.py  test_dafunk_broker.py  test_dafunk_core_library.py  test_dafunk_message.py  test_dafunk_service.py  test_dafunk_settings.py  test_dafunk_storage.py  test_dafunk_utils.py
core/tests/files/: Welcome_Upload.tar.xz
core/tests/files/dafunk_test_command/: Dockerfile
core/tests/fixtures/: settings.yaml  settings_broker.yaml
docs/DaFunk/: docusaurus.config.ts  package-lock.json  package.json
docs/DaFunk/docs/DaRaft/: _category_.json  specifications.md
docs/DaFunk/src/pages/: index.tsx
gateway/: setup.py
