[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dafunk_builkder"
dynamic = ["version"]
requires-python = ">= 3.12"
description = "The Vm builder"
readme = "README.rst"
authors = [
  {name = "Andrea Mucci", email = "andrea@clariteia.com"}
]
maintainers = [
  {name = "Andrea Mucci", email = "andrea@clariteia.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Core Library",
    "Framework :: DaFunk",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {text = "GNU General Public License v3"}
dependencies = [
    "dafunk_core",
    "pytest==8.3.4"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/andrea-mucci/dafunk/issues"
changelog = "https://github.com/andrea-mucci/dafunk/blob/master/changelog.md"
homepage = "https://github.com/andrea-mucci/dafunk"

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}

[tool.setuptools.packages.find]
include = ["src*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

