[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.project_slug}}"
dynamic = ["version"]
requires-python = ">= 3.12"
description = "{{cookiecutter.project_short_description}}"
readme = "README.rst"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
maintainers = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Core Library",
    "Framework :: DaFunk",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {text = "GNU General Public License v3"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}"

[tool.setuptools.dynamic]
version = {attr = "{{cookiecutter.pkg_name}}.__version__"}

[tool.setuptools.packages.find]
include = ["{{cookiecutter.pkg_name}}*"]

# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

